--- a/Server/Properties/launchSettings.json
+++ b/Server/Properties/launchSettings.json
@@ -17,11 +17,10 @@
     },
     "Server": {
       "commandName": "Project",
-      "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Staging"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:443;https://localhost:80"
     },
     "Docker": {
       "commandName": "Docker",
